Fixed: Undefined index error in edit_profile.php when the item is a set of radio inputs. Fixed: Missing PM column when searching for a user in user_relations.php Fixed: Invalid calculation of user relationship bitwise when setting the PM block option. Changed: Links_detail.php changed to use new form_radio_array functionality. Changed: Logic for Friends / Private / Unset profile is now done in the SQL / in the user_get_profile_items() function. Added: Timezone added as a selection in the profile items dropdown in visitor_log.php. Added: Overflow added to columns in visitor_log.php to stop them overflowing the row.

--- a/forum/styles/Default/style.css
+++ b/forum/styles/Default/style.css
@@ -1103,6 +1103,11 @@ a {
     border-left: 1px solid #000000;
 }
 
+.profile_item_overflow {
+    overflow: hidden;
+    height: 1.2em;
+}
+
 .image_resize_text {
     border: 1px dashed #000000;
     height: 25px;
